p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct_Review__c/BBTProduct_Review__c.object-meta.xml
<CustomObject>
    <label>BBTProduct Review</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>BBTProduct Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BBTProduct Review(s)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>