p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct_Review__c/fields/BBT_Product__c.field-meta.xml
<CustomField>
    <fullName>BBT_Product__c</fullName>
    <label>BBT Product</label>
    <referenceTo>BBTProduct__c</referenceTo>
    <relationshipLabel>BBTProduct Review(s)</relationshipLabel>
    <relationshipName>BBTProduct_Review_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>