p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct_Review__c/fields/BBTCustomer__c.field-meta.xml
<CustomField>
    <fullName>BBTCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BBTCustomer</label>
    <referenceTo>BBTCustomer__c</referenceTo>
    <relationshipLabel>BBTProduct Review(s)</relationshipLabel>
    <relationshipName>BBTProduct_Review_s</relationshipName>
    <type>Lookup</type>
</CustomField>