p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct_Review__c/fields/Review_Stars__c.field-meta.xml
<CustomField>
    <fullName>Review_Stars__c</fullName>
    <label>Review Stars</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5</label>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>