p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Review_Content__c</columns>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>BBT_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>