p2_final_site/revature-alchemy-project-2/force-app/main/default/objects/BBTProduct_Review__c/listViews/View_More_Review_Info.listView-meta.xml
<ListView>
    <fullName>View_More_Review_Info</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>View More Review Info</label>
</ListView>